解决图片适配（图片两边留白）的问题，宽度填满屏幕，高度自适应

--- a/app/src/main/res/layout/layout_image.xml
+++ b/app/src/main/res/layout/layout_image.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.photoselector.ui.photoview.PhotoView
+    <com.google.photoselector.ui.widget.ResizablePhotoView
         android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
